[package]
name = "http-signatures"
description = "An implementation of the HTTP Signatures RFC"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Riley Trautman <riley.trautman@gmail.com>"]
repository = "https://github.com/asonix/http-signatures"
readme = "README.md"
keywords = ["web", "http", "signatures"]

[features]
default = []
use_hyper = ["hyper"]
use_reqwest = ["reqwest"]
use_rocket = ["rocket"]

[dependencies]
untrusted = "0.5"
base64 = "0.6"
hyper = { version = "0.11", optional = true }
reqwest = { version = "0.8", optional = true }
rocket = { version = "0.3", optional = true }

[dependencies.ring]
version = "0.11"
features = ["rsa_signing"]
